fix z-index on modals

--- a/src/styles/components/_main-login.scss
+++ b/src/styles/components/_main-login.scss
@@ -10,7 +10,7 @@
 	justify-content: start;
 	align-items: flex-start;
 	max-width: 455px;
-	z-index: 20;
+	z-index: 40;
 	background-color: #fff;
 	border-radius: 5px;
 	padding: 20px;
